fix info modal formatting on mobile. add horizontal bar.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,5 +151,6 @@ transform: rotateY(180deg);
 }
 
 .info {
-    border: 1000 solid rgba(0,0,0,0.9);
+    border: 1000 solid rgba(0,0,0,0.5);
+    background-clip: padding-box;
 }
